# StarMap

./: .gitignore  CMakeLists.txt  README.md  package.xml  pip2-requirements.txt  starmap_nodelet.xml
include/starmap/: starmap.h
launch/: kitti-darknet-starmap.launch  kitti-sort_ros-starmap.launch  starmap.launch
lib/starmap/utils/: img.py
msg/: TrackedBBoxListWithKeypoints.msg  TrackedBBoxWithKeypoints.msg
python/models/: hg.py
python/models/layers/: Residual.py
python/starmap/utils/: img.py
src/: starmap.cpp  starmap_demo.cpp  starmap_nodelet.cpp
tests/: test_crop.cpp  test_crop.py  test_hmparse.cpp
tests/data/: car-pts.cv2.yaml
tools/: convert_images_to_videos.sh  demo.py  launch_starmap_on_bagfiles.sh
